--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <nav class="navbar">
       <ul class="nav-list">
+        <div class="logo">
+          <img src="public/images.jpg" alt="logo" />
+        </div>
         <li><a href="#home">Home</a></li>
-
         <li><a href="#about">About</a></li>
-
         <li><a href="#services">Services</a></li>
-
         <li><a href="#contact">Contact us</a></li>
       </ul>
     </nav>
