--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <title>The-Future-of-Education-is-here</title>
     <style></style>
   </head>
@@ -18,6 +19,10 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact us</a></li>
       </ul>
+      <div class="rightnav">
+        <input type="text" name="search" id="search" />
+        <button class="btn btn-sm">Search</button>
+      </div>
     </nav>
   </body>
 </html>
