--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style></style>
   </head>
   <body>
-    <nav class="navbar">
+    <nav class="navbar background">
       <ul class="nav-list">
         <div class="logo">
           <img src="public/images.jpg" alt="logo" />
