add css to box-main class

--- a/index.html
+++ b/index.html
@@ -24,5 +24,24 @@
         <button class="btn btn-sm">Search</button>
       </div>
     </nav>
+    <section class="background firstSection">
+      <div class="box-main">
+        <div class="firsthalf">
+          <p class="text-big">The-Future-of-Education-is-here</p>
+          <p class="textsmall">
+            In this world of 7 billion people we need to educate all of them.
+            This is the future of educated world and we are proud to say that
+            The uture of Education is here
+          </p>
+          <div class="buttons">
+            <button class="btn">Subscribe</button>
+            <button class="btn">Watch Videos</button>
+          </div>
+        </div>
+        <div class="secondhalf">
+          <img src="public/images.jpg" alt="laptop image" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
