set top set part and set first help

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style></style>
   </head>
   <body>
-    <nav class="navbar background">
+    <nav class="navbar">
       <ul class="nav-list">
         <div class="logo">
           <img src="public/images.jpg" alt="logo" />
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="secondhalf">
-          <img src="public/images.jpg" alt="laptop image" />
+          <img src="public/lapi.jpg" alt="laptop image" />
         </div>
       </div>
     </section>
