add section secRight

--- a/index.html
+++ b/index.html
@@ -43,5 +43,17 @@
         </div>
       </div>
     </section>
+    <section class="secRight">
+      <p class="sectionTag">the end of your search is here</p>
+      <section class="sectionSubTag">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium
+        perspiciatis consequatur nemo eveniet iste fugit et nobis delectus harum
+        tempore veritatis, officiis nulla, animi aspernatur maxime sunt ex unde
+        expedita.
+        <div class="thumbnail">
+          <img src="public/student.jpg" alt="image" class="imgfluid" />
+        </div>
+      </section>
+    </section>
   </body>
 </html>
