add secleft section

--- a/index.html
+++ b/index.html
@@ -44,16 +44,32 @@
       </div>
     </section>
     <section class="secRight">
-      <p class="sectionTag">the end of your search is here</p>
-      <section class="sectionSubTag">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium
-        perspiciatis consequatur nemo eveniet iste fugit et nobis delectus harum
-        tempore veritatis, officiis nulla, animi aspernatur maxime sunt ex unde
-        expedita.
-        <div class="thumbnail">
-          <img src="public/student.jpg" alt="image" class="imgfluid" />
+      <div>
+        <p class="sectionTag text-big">The end of your search is here</p>
+        <p class="sectionSubTag textsmall">
+          You can have access to professors from the best universities in the world, but you still need to be willing to do the work, even when it’s hard. If you can’t do it alone, remember that asking for help is part of doing the work
+          We said it in our vision too. When you educate people, you take down barriers. You help them see what it’s like in other situations, cultures and countries. You create a world that is more tolerant to differences and accepting of all.
+        </p>
         </div>
-      </section>
+        <div class="thumbnail">
+          <img src="public/student.jpg" alt="image">
+        </div>
+      </div>
     </section>
+
+     <section class="sectionleft">
+      <div>
+        <p  style="margin-bottom: -5px; padding-left: 4px;" class="sectionTag text-big">The end of your search is here</p>
+        <p class="sectionSubTag textsmall">
+          You can have access to professors from the best universities in the world, but you still need to be willing to do the work, even when it’s hard. If you can’t do it alone, remember that asking for help is part of doing the work
+          We said it in our vision too. When you educate people, you take down barriers. You help them see what it’s like in other situations, cultures and countries. You create a world that is more tolerant to differences and accepting of all.
+        </p>
+        </div>
+        <div class="thumbnail">
+          <img src="public/download (1).jpg" alt="image">
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
