add css to thumbnail class

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
     <section class="secRight">
       <div>
-        <p class="sectionTag text-big">The end of your search is here</p>
+        <p class="sectionTag text-big">Transforming education in india</p>
         <p class="sectionSubTag textsmall">
           You can have access to professors from the best universities in the world, but you still need to be willing to do the work, even when it’s hard. If you can’t do it alone, remember that asking for help is part of doing the work
           We said it in our vision too. When you educate people, you take down barriers. You help them see what it’s like in other situations, cultures and countries. You create a world that is more tolerant to differences and accepting of all.
@@ -65,7 +65,7 @@
           We said it in our vision too. When you educate people, you take down barriers. You help them see what it’s like in other situations, cultures and countries. You create a world that is more tolerant to differences and accepting of all.
         </p>
         </div>
-        <div class="thumbnail">
+        <div style="margin-top: 20px;margin-right: 5px;" class="thumbnail">
           <img src="public/download (1).jpg" alt="image">
         </div>
       </div>
