--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </div>
       </div>
     </section>
+
     <section class="secRight">
       <div>
         <p class="sectionTag text-big">Transforming education in india</p>
@@ -56,7 +57,7 @@
         </div>
       </div>
     </section>
-
+    <hr style="margin-bottom: 150px;">
      <section class="sectionleft">
       <div>
         <p  style="margin-bottom: -5px; padding-left: 4px;" class="sectionTag text-big">The end of your search is here</p>
@@ -70,6 +71,25 @@
         </div>
       </div>
     </section>
-
+    <hr>
+    <section class="contact">
+      <h2 class="text-center" >Contact us</h2>
+      <div class="form">
+        <input class ="form-input" type="text" name="name" id="name" placeholder="Enter your name">
+        <input class ="form-input" type="number" name="phone" id="phone" placeholder="Enter your phone">
+        <input class ="form-input" type="email" name="email" id="email" placeholder="Enter your email">
+        <textarea class ="form-input"  name ="text" id="text" cols ="30" rows="10">Ellaborate your concern</textarea>
+        <button class="btn btnDark">Submit</button>
+      </div>
+    </section>
+    <br>
+    <br>
+    <br>
+     <br>
+    <br>
+    <br>
+     <br>
+    <br>
+    <br>
   </body>
 </html>
