--- a/index.html
+++ b/index.html
@@ -82,14 +82,10 @@
         <button class="btn btnDark">Submit</button>
       </div>
     </section>
-    <br>
-    <br>
-    <br>
-     <br>
-    <br>
-    <br>
-     <br>
-    <br>
-    <br>
+   <footer>
+     <p class="text-footer">
+       Copyright &copy; 2027 - All rights reversed
+     </p>
+   </footer>
   </body>
 </html>
