--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         <input class ="form-input" type="number" name="phone" id="phone" placeholder="Enter your phone">
         <input class ="form-input" type="email" name="email" id="email" placeholder="Enter your email">
         <textarea class ="form-input"  name ="text" id="text" cols ="30" rows="10" placeholder="Ellaborate your concern"></textarea>
-        <button class="btn btnDark">Submit</button>
+        <button class="btn btnDark btn-sm">Submit</button>
       </div>
     </section>
-   <footer>
+   <footer class="bc">
      <p class="text-footer">
-       Copyright &copy; 2027 - All rights reversed
+       Copyright &copy; 2027 iEducate.com - All rights reversed
      </p>
    </footer>
   </body>
