--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact us</a></li>
       </ul>
-      <div class="rightnav">
+      <div class="rightnav" >
         <input type="text" name="search" id="search" />
         <button class="btn btn-sm">Search</button>
       </div>
     </nav>
-    <section class="background firstSection">
+    <section class="background firstSection" id ="home">
       <div class="box-main">
         <div class="firsthalf">
           <p class="text-big">The-Future-of-Education-is-here</p>
@@ -44,7 +44,7 @@
       </div>
     </section>
 
-    <section class="secRight">
+    <section class="secRight" id ="about">
       <div>
         <p class="sectionTag text-big">Transforming education in india</p>
         <p class="sectionSubTag textsmall">
@@ -72,7 +72,7 @@
       </div>
     </section>
     <hr>
-    <section class="contact">
+    <section class="contact" id ="contact">
       <h2 class="text-center" >Contact us</h2>
       <div class="form">
         <input class ="form-input" type="text" name="name" id="name" placeholder="Enter your name">
